--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-   
+    <link rel="stylesheet" href="/css/style.css">
     <title>To Do APP</title>
 </head>
 <body>
@@ -42,18 +42,25 @@
                 <tbody>
                   <tr>
                     <th scope="row">Fazer um todo list com nodejs </th>
-                    <td> <a href="" class="btn btn-warning">Editar</a></td>
-                    <td> <a href="" class="btn btn-danger">Excluir</a></td>                   
+                    <td> <a href="" class="btn btn-warning">Editar</a>
+                        <a href="" class="btn btn-danger">Excluir</a>
+                        
+                    </td>                
                   </tr>
                   <tr>
-                    <th scope="row">Fazer um todo list com nodejs </th>
-                    <td> <a href="" class="btn btn-warning">Editar</a></td>
-                    <td> <a href="" class="btn btn-danger">Excluir</a></td>                   
+                    <th scope="row">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eveniet, nesciunt!</th>
+                    <td> <a href="" class="btn btn-warning">Editar</a>
+                        <a href="" class="btn btn-danger">Excluir</a>
+                        
+                    </td>                
                   </tr>
                   <tr>
-                    <th scope="row">Fazer um todo list com nodejs </th>
-                    <td> <a href="" class="btn btn-warning">Editar</a></td>
-                    <td> <a href="" class="btn btn-danger">Excluir</a></td>                   
+                    <th scope="row">Fazer um todo list com nodejs  e bootstrap</th>
+                    <td> <a href="" class="btn btn-warning">Editar</a>
+                        <a href="" class="btn btn-danger">Excluir</a>
+                        
+                    </td>
+                           
                   </tr>
                   
                 </tbody>
