--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,6 +1,16 @@
 .card{
-    border-radius: 23px 24px 24px 24px;
--moz-border-radius: 23px 24px 24px 24px;
--webkit-border-radius: 23px 24px 24px 24px;
-border: 2px solid #000000;
+border: 1px solid #000000;
+}
+.card-header{
+    background-color: lightblue;
+}
+
+.botao_adicionar:hover{
+    width: 100px;
+    font-size: 16px;
+}
+
+
+.fonte_padrao{
+    font-size: 22px;
 }
